--- a/HTML/belajar-html-dasar/span.html
+++ b/HTML/belajar-html-dasar/span.html
@@ -1,9 +1,17 @@
 <html>
     <body>
+
+        <!-- DIFERENCE BLOCK AND INLINE -->
         <h1>
-            <span style="color: red;">Programmer </span>
-            <span style="color: blue;">Zaman </span>
-            <span style="color: orange;">Now</span>
+            <span style="background-color: red;">Programmer </span>
+            <span style="background-color: blue;">Zaman </span>
+            <span style="background-color: orange;">Now</span>
+        </h1>
+
+        <h1>
+            <div style="background-color: red;">Programmer </div>
+            <div style="background-color: blue;">Zaman </div>
+            <div style="background-color: orange;">Now</div>
         </h1>
     </body>
 </html>
