--- a/HTML/belajar-html-dasar/list.html
+++ b/HTML/belajar-html-dasar/list.html
@@ -1,7 +1,19 @@
 <html>
     <body>
         <h2>Daftar Hobby</h2>
-        <ul>
+        <ul type="circle">
+            <li>Koding</li>
+            <li>Main Game</li>
+            <li>Olahraga</li>
+        </ul>
+
+         <ul type="disc">
+            <li>Koding</li>
+            <li>Main Game</li>
+            <li>Olahraga</li>
+        </ul>
+
+         <ul type="square">
             <li>Koding</li>
             <li>Main Game</li>
             <li>Olahraga</li>
@@ -14,5 +26,36 @@
             <li>Belajar HTML</li>
             <li>Menjalankan di Web Hosting</li>
         </ol>
+
+         <ol type="a">
+            <li>Menginstall Aplikasi</li>
+            <li>Belajar Pengenalan Web</li>
+            <li>Belajar HTML</li>
+            <li>Menjalankan di Web Hosting</li>
+        </ol>
+
+         <ol type="i">
+            <li>Menginstall Aplikasi</li>
+            <li>Belajar Pengenalan Web</li>
+            <li>Belajar HTML</li>
+            <li>Menjalankan di Web Hosting</li>
+        </ol>
+
+         <ol type="I">
+            <li>Menginstall Aplikasi</li>
+            <li>Belajar Pengenalan Web</li>
+            <li>Belajar HTML</li>
+            <li>Menjalankan di Web Hosting</li>
+        </ol>
+
+        
+         <ol type="1">
+            <li>Menginstall Aplikasi</li>
+            <li>Belajar Pengenalan Web</li>
+            <li>Belajar HTML</li>
+            <li>Menjalankan di Web Hosting</li>
+        </ol>
+
+
     </body>
 </html>
